--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -1,6 +1,6 @@
-add_library(crdt++ INTERFACE)
-target_include_directories(crdt++ INTERFACE .)
-target_compile_features(crdt++ INTERFACE cxx_std_20)
+add_library(crdtxx INTERFACE)
+target_include_directories(crdtxx INTERFACE .)
+target_compile_features(crdtxx INTERFACE cxx_std_20)
 
 add_executable(dot_test dot_test.cpp)
 target_include_directories(dot_test INTERFACE .)
