feat: add grow-only witnessed counter
Signed-off-by: Maxim Eryomenko <moeryomenko@gmail.com>

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,3 +5,7 @@ add_test(NAME DotTestSuite COMMAND dot_test)
 add_executable(version_vector_test version_vector_test.cpp)
 target_link_libraries(version_vector_test crdtxx rapidcheck)
 add_test(NAME VectorTestSuite COMMAND version_vector_test)
+
+add_executable(gcounter_test gcounter_test.cpp)
+target_link_libraries(gcounter_test crdtxx)
+add_test(NAME GCounterTestSuite COMMAND gcounter_test)
