feat: add last write win register
lwwreg is a simple CRDT that contains an arbitrary value
along with an ordered that tracks causality. It is the responsibility
of the user to guarantee that the source of the causal element
is monotonic. Don't use timestamps unless you are comfortable
with divergence.

Signed-off-by: Maxim Eryomenko <moeryomenko@gmail.com>

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -13,3 +13,7 @@ add_test(NAME GCounterTestSuite COMMAND gcounter_test)
 add_executable(pncounter_test pncounter_test.cpp)
 target_link_libraries(pncounter_test crdtxx rapidcheck)
 add_test(NAME PNCounterTestSuite COMMAND pncounter_test)
+
+add_executable(lwwreg_test lwwreg_test.cpp)
+target_link_libraries(lwwreg_test crdtxx rapidcheck)
+add_test(NAME LWWRegTestSuite COMMAND lwwreg_test)
