feat: add multi-value register
On concurrent writes, we will keep all values for which
we can't establish a causal history.

Signed-off-by: Maxim Eryomenko <moeryomenko@gmail.com>

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -17,3 +17,7 @@ add_test(NAME PNCounterTestSuite COMMAND pncounter_test)
 add_executable(lwwreg_test lwwreg_test.cpp)
 target_link_libraries(lwwreg_test crdtxx rapidcheck)
 add_test(NAME LWWRegTestSuite COMMAND lwwreg_test)
+
+add_executable(mvreg_test mvreg_test.cpp)
+target_link_libraries(mvreg_test crdtxx)
+add_test(NAME MVRegTestSuite COMMAND mvreg_test)
