fix: add property test for mvreg
Signed-off-by: Maxim Eryomenko <moeryomenko@gmail.com>

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -19,5 +19,5 @@ target_link_libraries(lwwreg_test crdtxx rapidcheck)
 add_test(NAME LWWRegTestSuite COMMAND lwwreg_test)
 
 add_executable(mvreg_test mvreg_test.cpp)
-target_link_libraries(mvreg_test crdtxx)
+target_link_libraries(mvreg_test crdtxx rapidcheck)
 add_test(NAME MVRegTestSuite COMMAND mvreg_test)
