test: proof gcounter invariants
Signed-off-by: Maxim Eryomenko <moeryomenko@gmail.com>

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,7 +7,7 @@ target_link_libraries(version_vector_test crdtxx rapidcheck)
 add_test(NAME VectorTestSuite COMMAND version_vector_test)
 
 add_executable(gcounter_test gcounter_test.cpp)
-target_link_libraries(gcounter_test crdtxx)
+target_link_libraries(gcounter_test crdtxx rapidcheck)
 add_test(NAME GCounterTestSuite COMMAND gcounter_test)
 
 add_executable(pncounter_test pncounter_test.cpp)
