--- a/.github/workflows/cmake.yaml
+++ b/.github/workflows/cmake.yaml
@@ -6,6 +6,7 @@ on:
       - '**'
     branches:
       - main
+  pull_request:
 
 env:
   BUILD_TYPE: Debug
@@ -46,4 +47,4 @@ jobs:
     - name: Test
       working-directory: ${{github.workspace}}/build
       shell: bash
-      run: ctest -C $BUILD_TYPE
+      run: ctest -C $BUILD_TYPE --output-on-failure
